# rewiring-aotearoa-electrification-progress-tracker

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  ETL_SQL_PYTHON_GUIDE.md  FIX_SUMMARY.md  LIGHTDASH_DEPLOYMENT.md  MULTIPAGE_IMPLEMENTATION.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  TODO.md  UPDATE_SUMMARY.md  debug_api.py  lightdash.yaml  metadata.yaml  pyproject.toml  render.yaml  run_pipeline.py  verify_setup.py
.github/workflows/: deploy-reflex-to-pages.yml
.streamlit/: config.toml
backend/: main.py  metadata.py  repository.py
docs/: API_CLIENT_REFACTORING_SUMMARY.md  ARCHITECTURE.md  BASE_API_REFACTORING.md  ETL_GUIDE.md  ETL_IMPLEMENTATION_SUMMARY.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICKSTART_NEW_PIPELINES.md  REFACTORING_SUMMARY.md  UPDATE_SUMMARY.md
edan_files/: metrics_config.py  pipeline.py  requirements.txt  run_pipeline.py
etl/: ETL_GUIDE.md  ETL_SQL_PYTHON_GUIDE.md  README_ScoreCard.MD  README_ScoreCard.html  README_ScoreCard.qmd  SQL_EXAMPLES.py  _10_P1_Gas.py  _12_P1_EnergyRenew.py  _13_P1_ElecCons.py  _14_P1_EnergyxFuel.py  __init__.py  createCompositeIndex.py  createScoreCard.py  run_all_pipelines.py
etl/apis/: demo_emi_retail.py  eeca.py  emi_generation.py  emi_retail.py  gic.py  waka_kotahi_mvr.py
etl/core/: __init__.py  base_api.py  config.py  http_api.py  mappings.py  medallion.py  pipeline.py
etl/pipelines/: _01_P1_EV.py  _02_P1_FF.py  _03_P1_NewEV.py  _04_P1_UsedEV.py  _05_P1_FleetElec.py  _06a_P1_BattPen.py  _06b_P1_BattPen.py  _07_P1_Sol.py  _08_P1_Batt.py  _10_P1_Gas.py  _11_P1_EnergyBoilers.py  _12_P1_EnergyRenew.py  _13_P1_ElecCons.py  _14_P1_EnergyxFuel.py  __init__.py  _bonus_ChargingStations.py  bronze_emi_retail.py  demo.py  gold_emi_retail.py  silver_emi_retail.py
etl/pipelines/eeca/: __init__.py  analytics.py  extract.py  extract_transform.py  transform.py
etl/pipelines/eeca_charging_stations/: extract.py
etl/pipelines/emi/: __init__.py  analytics.py  extract_transform.py  (+1 more)
frontend/: Introduction.py  __init__.py  dashboard_utils.py  shiny_app.py  streamlit_app.py
frontend/pages/: 0_🏠_Overview.py  1_🚗_Transport_Electrification.py  2_⚡_Energy_Grid.py  3_🏠_Buildings_&_Heating.py  4_☀️_Solar_&_Batteries.py  5_🗺️_Regional_Deep_Dive.py  6_📊_Cross_Sector_Analysis.py  7_💾_Data_Explorer.py
frontend/reflex_demo/: DASHBOARD_IMPLEMENTATION.md  Dockerfile  MAP_IMPLEMENTATION.md  MAP_IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  REGIONAL_MAP_DOCS.md  VISUALIZATION_PLAN.md  nixpacks.toml  requirements.txt  rxconfig.py
scripts/: verify_setup.py
(+34 files in other folders)
